--- a/AtividadeFinal2/src/Pages/QueroDoar/QueroDoas.module.scss
+++ b/AtividadeFinal2/src/Pages/QueroDoar/QueroDoas.module.scss
@@ -1,4 +1,4 @@
-s.Querodoarsection {
+.Querodoarsection {
     height: 85vh;
     display: flex;
     flex-direction: column;
@@ -41,7 +41,7 @@ input {
     }
 }
 
-s.buttonDoar {
+.buttonDoar {
     width: 50%;
     height: 8vh;
     font-size: 24px;
